cc_library(
    name = "Address",
    visibility = ["//visibility:public"],
    srcs = ["Address.cpp"],
    hdrs = ["Address.hpp"],
    deps = [
        ":NoteEncryption",
        ":prf",
        "//src:hash",
        "//src:serialize",
        "//src:streams",
        "//src:uint252",
        "//src:uint256",
    ],
)

cc_library(
    name = "IncrementalMerkleTree",
    visibility = ["//visibility:public"],
    srcs = ["IncrementalMerkleTree.cpp"],
    hdrs = ["IncrementalMerkleTree.hpp"],
    deps = [
        ":util",
        ":Zcash",
        "@boost//:optional",
        "@boost//:static_assert",
        "@boost//:type_traits",  # TODO(per-gron): The boost optional package should depend on this but doesn't
        "//src:serialize",
        "//src:uint256",
        "//src/crypto:sha256",
    ],
)

cc_library(
    name = "JoinSplit",
    visibility = ["//visibility:public"],
    srcs = ["JoinSplit.cpp"],
    hdrs = ["JoinSplit.hpp"],
    deps = [
        ":Address",
        ":IncrementalMerkleTree",
        ":Note",
        ":NoteEncryption",
        ":prf",
        ":Proof",
        ":util",
        ":Zcash",
        "@boost//:array",
        "@boost//:foreach",
        "@boost//:format",
        "@libsodium//:sodium",
        "//src:amount",
        "//src:tinyformat",
        "//src:uint252",
        "//src:uint256",
        "//src:util",
        "//src/snark:libsnark",
        "//src/zcash/circuit",
    ],
)

cc_library(
    name = "Note",
    visibility = ["//visibility:public"],
    srcs = ["Note.cpp"],
    hdrs = ["Note.hpp"],
    deps = [
        ":Address",
        ":NoteEncryption",
        ":prf",
        ":util",
        ":Zcash",
        "//src:streams",
        "//src:uint256",
        "//src:version",
        "//src/crypto:sha256",
    ],
)

cc_library(
    name = "NoteEncryption",
    visibility = ["//visibility:public"],
    srcs = ["NoteEncryption.cpp"],
    hdrs = ["NoteEncryption.hpp"],
    deps = [
        ":prf",
        ":Zcash",
        "@boost//:array",
        "@boost//:static_assert",
        "@libsodium//:sodium",
        "//src:uint252",
        "//src:uint256",
    ],
)

cc_library(
    name = "prf",
    visibility = ["//visibility:public"],
    srcs = ["prf.cpp"],
    hdrs = ["prf.h"],
    deps = [
        "//src:uint252",
        "//src:uint256",
        "//src/crypto:sha256",
    ],
)

cc_library(
    name = "Proof",
    visibility = ["//visibility:public"],
    srcs = ["Proof.cpp"],
    hdrs = ["Proof.hpp"],
    deps = [
        "@boost//:static_assert",
        "//src:serialize",
        "//src:uint256",
        "//src/crypto:common",
        "//src/snark:libsnark",
    ],
)

cc_library(
    name = "util",
    srcs = ["util.cpp"],
    hdrs = ["util.h"],
)

cc_library(
    name = "Zcash",
    visibility = ["//visibility:public"],
    hdrs = ["Zcash.h"],
)
